nginx_controller/app1.yaml
#Let’s create two backend services for two domains:

#Domain 1: app1.test.example.com
#Domain 2: app2.test.example.com

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: hashicorp/http-echo
        args:
        - "-text=Hello from App1!"
        ports:
        - containerPort: 5678
